--- a/src/pages/InterfaceB.css
+++ b/src/pages/InterfaceB.css
@@ -1,26 +1,49 @@
 /* Global styles */
+nav{
+  margin-bottom: 0px;
+}
+
+.header{
+  background-color: #d8d8d8;
+  margin-top: 0;
+  padding-bottom: 3em;
+}
+
+.title{
+  margin: 0;
+  padding-top: 2em;
+}
+
 .cards-container {
   display: flex;
   justify-content: space-between;
+  gap: 44px;
+  background-image: linear-gradient(#d8d8d8 35%, #ffffff 35%);
+  padding: 0 3em;
 }
 
 .card {
   background-color: rgb(178, 177, 177);
+  border: 2px solid #3d3b3b;
   border-radius: 10px;
   padding: 10px;
-  width: 30%;
+  flex: 1 1 0px;
 }
 
 .images-container {
   display: flex;
   flex-direction: column;
+  gap: 64px;
   align-items: center;
+  padding: 5em 3em;
 }
 
 .image {
   width: 100%;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  gap: 64px;
   margin: 1rem 0;
   text-align: left;
 }
@@ -29,7 +52,9 @@
   width: 100%;
   display: flex;
   flex-direction: row-reverse;
-  text-align: right;
+  justify-content: space-between;
+  align-items: center;
+  text-align: left;
 }
 
 .image > div {
@@ -42,40 +67,55 @@
   padding: 10px;
 }
 
-.image-reverse img {
-  width: 450px;
-  height: 150px;
+.image > img, .image-reverse > img{
+  width: 350px;
+  height: 200px;
   object-fit: cover;
+}
+.image-reverse img {
   margin: 0 1rem;
 }
 
 /* Media queries */
 @media only screen and (max-width: 768px) {
+  .header{
+    background-color: #d8d8d8;
+    padding: 0 3em;
+    padding-bottom: 1em;
+  }
+  
+  h2{
+    margin-top: 0;
+  }
   .cards-container {
     flex-direction: column;
+    background-image: linear-gradient(#d8d8d8 10%, #ffffff 10%);
+    gap: 12px;
   }
 
   .card {
     margin: 1rem 0;
-    width: 100%;
+    padding: 32px 10px;
   }
 
   .images-container {
     align-items: stretch;
+    gap: 12px;
+    padding-top: 3em;
   }
 
   .image {
     align-items: center;
-    text-align: center;
     flex-direction: column;
-    margin: 1rem 0;
+    gap: 16px;
+    margin: 0.2rem 0;
   }
 
   .image-reverse {
     align-items: center;
-    text-align: center;
     flex-direction: column;
-    margin: 1rem 0;
+    gap: 16px;
+    margin: 0.2rem 0;
   }
 
   .image > div {
@@ -83,7 +123,12 @@
   }
 
   .image-reverse > div {
-    margin-bottom: 1rem;
+    margin-bottom: 0.2rem;
+  }
+
+  .image img, .image-reverse img{
+    max-width: 100%;
+    width: 100%;
   }
   
   .image-reverse img {
