--- a/src/pages/InterfaceA.css
+++ b/src/pages/InterfaceA.css
@@ -237,6 +237,10 @@ footer span:last-child {
     gap: 16px;
   }
 
+  header{
+    padding-bottom: 44px;
+  }
+
   .article-footer {
     flex-direction: column;
   }
